--- a/web/app/styles/themes/pw-components/_field.scss
+++ b/web/app/styles/themes/pw-components/_field.scss
@@ -4,6 +4,8 @@
 // 1. Keep the original font color of the label instead of error color - as per design
 
 $field__caution-icon: 'data:image/svg+xml;utf8,<svg width="20px" height="20px" fill="#dc0a3c" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><g stroke="none" stroke-width="1" fill-rule="evenodd"><g><path d="M10,3 L18,17 L2,17 L10,3 Z M10.7604457,13 L9.23955432,13 L9,7 L11,7 L10.7604457,13 Z M9,15 C9,14.7080853 9.09536447,14.4684428 9.28609626,14.2810651 C9.47682805,14.0936874 9.71479358,14 10,14 C10.2852064,14 10.523172,14.0936874 10.7139037,14.2810651 C10.9046355,14.4684428 11,14.7080853 11,15 C11,15.2919147 10.9046355,15.5315572 10.7139037,15.7189349 C10.523172,15.9063126 10.2852064,16 10,16 C9.71479358,16 9.47682805,15.9063126 9.28609626,15.7189349 C9.09536447,15.5315572 9,15.2919147 9,15 Z"></path></g></g></svg>';
+$base__select-triangle: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="#4E439B"><polygon points="0 0 12 0 5.99940185 6"></polygon></svg>';
+$base__disabled-select-triangle: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="#999999"><polygon points="0 0 12 0 5.99940185 6"></polygon></svg>';
 
 .pw-field {
     &.pw--error {
@@ -131,5 +133,62 @@ $field__caution-icon: 'data:image/svg+xml;utf8,<svg width="20px" height="20px" f
         position: absolute; // 2
         top: 100%; // 3
         right: 0; // 3
+    }
+}
+
+
+// Modifier Select
+// ---
+//
+// 1. Used to position absolute select triangle
+// 2. Avoid covering the field border
+// 3. Fade out effect to cover long text
+
+.pw-field.pw--has-select {
+    .pw-field__input {
+        position: relative; // 1
+
+        &::after {
+            content: '';
+
+            position: absolute; // 1
+            top: 50%;
+            right: 0;
+
+            width: 12px;
+            height: 6px;
+
+            background-image: url($base__select-triangle); // @TODO replace with Icon component
+            background-size: 12px 6px;
+
+            transform: translate(-100%, -50%);
+
+            pointer-events: none;
+        }
+
+        &::before { // 3
+            content: '';
+
+            position: absolute;
+            top: 1px; // 2
+            right: 1px; // 2
+
+            width: 25%;
+            height: 42px;
+
+            background: linear-gradient(to left, $neutral-00 40%, rgba($neutral-00, 0) 70%);
+
+            pointer-events: none;
+        }
+    }
+
+    .pw-field__input.pw--disabled {
+        &::after {
+            background-image: url($base__disabled-select-triangle); // @TODO replace with Icon component
+        }
+
+        &::before {
+            background: linear-gradient(to left, $neutral-15 40%, transparent 70%);
+        }
     }
 }
